--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   "homepage": "https://github.com/streemua/CypressAutomation#readme",
   "devDependencies": {
     "angular-http-server": "^1.9.0",
-    "cypress": "^4.12.0",
+    "cypress": "^4.12.1",
     "cypress-xpath": "^1.4.0",
     "npm-run-all": "^4.1.5"
   }
